[package]
name = "history-viewer-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.28"
line-history = { git = "https://github.com/TyomoGit/rust-line-his.git", version = "0.1.11" }
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }
time = "0.3.28"
wasm-timer = "0.2.5"
