[package]
name = "rust-bind"
version = "0.1.0"
authors = ["pullriku <riku3dno.1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.3.0", features = ["wasm_js"] }
line-history = { git = "https://github.com/pullriku/line-history-rs.git", version = "0.14.0"}
chrono = { version = "0.4.40", features = ["serde", "wasmbind"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
